worker added networking

--- a/worker/CMakeLists.txt
+++ b/worker/CMakeLists.txt
@@ -19,19 +19,25 @@ set(SOURCE_LIST ${SOURCE_DIR}/main.c
         ${SOURCE_DIR}/encrypt_pwd.c
         ${SOURCE_DIR}/parse_args.c
         ${SOURCE_DIR}/worker.c
+        ${SOURCE_DIR}/networking.c
 )
 set(HEADER_LIST ${INCLUDE_DIR}/worker.h
         ${INCLUDE_DIR}/parse_args.h
         ${INCLUDE_DIR}/options.h
         ${INCLUDE_DIR}/encrypt_pwd.h
+        ${INCLUDE_DIR}/networking.h
 
 )
 include_directories(${INCLUDE_DIR})
+
+# Find OpenSSL
+find_package(OpenSSL REQUIRED)
 
 add_executable(distributed-password-hacker ${SOURCE_MAIN} ${SOURCE_LIST} ${HEADER_LIST})
 target_include_directories(distributed-password-hacker PRIVATE include)
 target_include_directories(distributed-password-hacker PRIVATE /usr/local/include)
 target_link_directories(distributed-password-hacker PRIVATE /usr/local/lib)
+target_link_libraries(distributed-password-hacker OpenSSL::SSL OpenSSL::Crypto)
 
 if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     target_include_directories(distributed-password-hacker PRIVATE /usr/include)
